--- a/mati.html
+++ b/mati.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MODOFIT</title>
     <link rel="stylesheet" href="styles/estilo.css">
   </head>
@@ -18,9 +19,6 @@
 						<li><a href="#"><img src="images/icon/perfil.png" alt=""> Perfil</a></li>
 					</ul>
 				</li>
-        <li class="buscar">
-          <input type="search" placeholder="Buscar . . ." id="inputBusqueda">
-        </li>
 			</ul>
 		</nav>
     <main>
