--- a/mati.html
+++ b/mati.html
@@ -26,10 +26,164 @@
 
       </section>
       <section class="contenido">
-        <h1>Seleccion de Cliente</h1>
-        <ul>
-          <p>objetivo masa muscular</p>
-        </ul>
+          <table class="tg">
+            <tr>
+              <th class="tg-s6z2" colspan="15">ADAPTACION ANATOMICA</th>
+            </tr>
+            <tr>
+              <td class="tg-13pz"><span style="font-weight:bold">SEMANA/DIA</span></td>
+              <td class="tg-0lax">S1/DMa</td>
+              <td class="tg-0lax">S1/DV</td>
+              <td class="tg-0lax">S2/DL</td>
+              <td class="tg-0lax">S2/DMi</td>
+              <td class="tg-0lax">S2/DV</td>
+              <td class="tg-0lax">S3/DL</td>
+              <td class="tg-0lax">S3/DMi</td>
+              <td class="tg-0lax">S3/DV</td>
+              <td class="tg-0lax">S4/DL</td>
+              <td class="tg-0lax">S4/DMi</td>
+              <td class="tg-0lax">S4/DV</td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax">ABDOMEN</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax">PARAVERTEBRALES</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh">3X15</td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax">ABDUCTORES DE ESCAPULA</td>
+              <td class="tg-baqh">2X50:30%</td>
+              <td class="tg-baqh">2X50:30%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X40:40%</td>
+              <td class="tg-baqh">3X40:40%</td>
+              <td class="tg-baqh">3X35:45%</td>
+              <td class="tg-baqh">3X35:45%</td>
+              <td class="tg-baqh">3X30:50%</td>
+              <td class="tg-baqh">3X30:50%</td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax">DORSAL-BICEPS</td>
+              <td class="tg-baqh">2X50:30%</td>
+              <td class="tg-baqh">2X50:30%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X40:40%</td>
+              <td class="tg-baqh">3X40:40%</td>
+              <td class="tg-baqh">3X35:45%</td>
+              <td class="tg-baqh">3X35:45%</td>
+              <td class="tg-baqh">3X30:50%</td>
+              <td class="tg-baqh">3X30:50%</td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax">PECTORAL-TRICEPS</td>
+              <td class="tg-baqh">2X50:30%</td>
+              <td class="tg-baqh">2X50:30%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X40:40%</td>
+              <td class="tg-baqh">3X40:40%</td>
+              <td class="tg-baqh">3X35:45%</td>
+              <td class="tg-baqh">3X35:45%</td>
+              <td class="tg-baqh">3X30:50%</td>
+              <td class="tg-baqh">3X30:50%</td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax">CUADRICEPS</td>
+              <td class="tg-baqh">2X50:30%</td>
+              <td class="tg-baqh">2X50:30%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X45:35%</td>
+              <td class="tg-baqh">3X40:40%</td>
+              <td class="tg-baqh">3X40:40%</td>
+              <td class="tg-baqh">3X35:45%</td>
+              <td class="tg-baqh">3X35:45%</td>
+              <td class="tg-baqh">3X30:50%</td>
+              <td class="tg-baqh">3X30:50%</td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+              <td class="tg-baqh"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax">ISQUIOTIBIALES</td>
+              <td class="tg-0lax">2X50:30%</td>
+              <td class="tg-0lax">2X50:30%</td>
+              <td class="tg-0lax">3X45:35%</td>
+              <td class="tg-0lax">3X45:35%</td>
+              <td class="tg-0lax">3X45:35%</td>
+              <td class="tg-0lax">3X40:40%</td>
+              <td class="tg-0lax">3X40:40%</td>
+              <td class="tg-0lax">3X35:45%</td>
+              <td class="tg-0lax">3X35:45%</td>
+              <td class="tg-0lax">3X30:50%</td>
+              <td class="tg-0lax">3X30:50%</td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">+S +% -R</td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">+% -R</td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">+% -R</td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">+% -R</td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax"></td>
+            </tr>
+          </table>
       </section>
     </main>
     <footer>
