--- a/mati.html
+++ b/mati.html
@@ -184,6 +184,57 @@
               <td class="tg-0lax"></td>
             </tr>
           </table>
+          <br>
+          <table class="tg">
+            <tr>
+              <th class="tg-f5i8">% DE CARGA </th>
+              <th class="tg-f5i8">30</th>
+              <th class="tg-f5i8">35</th>
+              <th class="tg-f5i8">40</th>
+              <th class="tg-f5i8">45</th>
+              <th class="tg-f5i8">50</th>
+            </tr>
+            <tr>
+              <td class="tg-lsex">ABDUCTORES DE ESCAPULA</td>
+              <td class="tg-lsex">2.1 KG</td>
+              <td class="tg-lsex">2,4 KG</td>
+              <td class="tg-lsex">2,6 KG</td>
+              <td class="tg-lsex">3,1 KG</td>
+              <td class="tg-2pb4">3,5 KG</td>
+            </tr>
+            <tr>
+              <td class="tg-rma0">DORSAL-BICEPS</td>
+              <td class="tg-rma0">21,6 KG - 6L</td>
+              <td class="tg-rma0">25,2 KG - 7L</td>
+              <td class="tg-rma0">28,8 KG - 8L</td>
+              <td class="tg-rma0">32,4 KG - 9L</td>
+              <td class="tg-2ab3">36 KG - 10L</td>
+            </tr>
+            <tr>
+              <td class="tg-ryqc">PECTORAL-TRICEPS</td>
+              <td class="tg-ryqc">8 KG</td>
+              <td class="tg-ryqc">9,9 KG</td>
+              <td class="tg-ryqc">11,4 KG</td>
+              <td class="tg-ryqc">12,8 KG</td>
+              <td class="tg-6fpv">14,2 KG</td>
+            </tr>
+            <tr>
+              <td class="tg-d1ws">CUADRICEPS   Xpierna</td>
+              <td class="tg-ik6k">33 KG - 6L</td>
+              <td class="tg-ik6k">38,5 KG - 7L</td>
+              <td class="tg-ik6k">44 KG - 8L</td>
+              <td class="tg-ik6k">49,5 KG - 9L</td>
+              <td class="tg-k3k5">55 KG - 10L</td>
+            </tr>
+            <tr>
+              <td class="tg-qr00">ISQUIOTIBIALES</td>
+              <td class="tg-l8q8">13,6 KG - 6L</td>
+              <td class="tg-l8q8">15 KG - 7L</td>
+              <td class="tg-l8q8">18 KG - 8L</td>
+              <td class="tg-l8q8">20,2 KG - 9L</td>
+              <td class="tg-pyll">22,5 KG 10L</td>
+            </tr>
+          </table>
       </section>
     </main>
     <footer>
